--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,6 @@
 node_modules
-npm-debug.log
-Dockerfile*
-.dockerignore
 .git
-.gitignore
-docker-compose.yml
+.vscode
 README.md
-documentation/ 
+Dockerfile
+.dockerignore 
